index.html文件第一次提交

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ window.onload=function(){
 	<div id="box">
     	<textarea id="text" cols="20" rows="20"></textarea>
         <div id="mid">
-        	<input id="button" type="button" value="文字右移"/>
+        	<input id="button" type="button" value="文字右移吧"/>
             <strong>0/0</strong>
             <ul>
             	<li></li>
