index1.html第一次提交修改

--- a/index1.html
+++ b/index1.html
@@ -40,7 +40,7 @@
 </head>
 <body onload= "createCode()">
 	<div class="wrap">
-		<input type="text" id="text" placeholder = "请输入验证码">
+		<input type="text" id="text" placeholder = "请输入验证码吧">
 		<a href="javascript:" id="code" onclick="createCode( this )"></a>
 		<input type="button" id="btn" value="验证" onclick="validate()">
 	</div>
